--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,6 +24,10 @@
                     <h3>{{ .Title }}</h3>
                     <p class="product-price">${{ .Params.price }}</p>
                 </a>
+                <button class="add-to-cart-btn" type="button" onclick="addToCart('{{ with .File }}{{ .BaseFileName }}{{ else }}{{ .Title | urlize }}{{ end }}', '{{ .Title }}', {{ .Params.price }}, '{{ .Params.image }}', '{{ .Params.stripe_price_id }}', this)">
+                    <span class="btn-text">Add to Cart</span>
+                    <span class="loading">Processing...</span>
+                </button>
             </div>
             {{ end }}
         </div>
