Homepage re-design 1.12

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Top Banner -->
     <div class="top-banner">
-        <div class="banner-text">FREE USA SHIPPING ON ORDERS OVER $100</div>
+        <span class="banner-text">FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100</span>
     </div>
 
     <!-- Header: Centered Logo and Cart -->
