--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,10 @@
 <body>
     <!-- Top Banner -->
     <div class="top-banner">
-        <span class="banner-text">FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100</span>
+        <div class="ticker-track">
+            <span class="banner-text">FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100</span>
+            <span class="banner-text">FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100 &nbsp; • &nbsp; FREE USA SHIPPING ON ORDERS OVER $100</span>
+        </div>
     </div>
 
     <!-- Header: Centered Logo and Cart -->
