--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,7 +64,7 @@ body {
 }
 
 .header {
-    background: url('/images/cottagecore webpg.png') center/cover no-repeat;
+    background: url('/images/cottagecore webpg.png') center/cover no-repeat !important;
     padding: 1.1rem 0 0.7rem 0;
     border-bottom: none;
     box-shadow: none;
