--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,11 +63,13 @@ body {
 }
 
 .header {
-    background: url('/images/cottagecore webpg.png') center/cover no-repeat !important;
+    background: url('/images/cottagecore.png') center/cover no-repeat !important;
+    min-height: 200px;
     padding: 1.1rem 0 0.7rem 0;
     border-bottom: none;
     box-shadow: none;
     margin-top: 0;
+    position: relative;
 }
 .header-container {
     background: none;
