Wrap nav tab text in span for gradient effect and update nav tab styles

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -59,11 +59,11 @@
     <!-- Navigation Bar -->
     <nav class="main-nav desktop-nav">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/products">All Products</a></li>
-            <li><a href="/vision">Our Vision</a></li>
-            <li><a href="/blog">Blog</a></li>
-            <li><a href="/contact">Contact Us</a></li>
+            <li><a href="/"><span>Home</span></a></li>
+            <li><a href="/products"><span>All Products</span></a></li>
+            <li><a href="/vision"><span>Our Vision</span></a></li>
+            <li><a href="/blog"><span>Blog</span></a></li>
+            <li><a href="/contact"><span>Contact Us</span></a></li>
         </ul>
     </nav>
     
