--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,6 +57,7 @@ body {
     background-clip: padding-box;
 }
 .main-nav ul li a span {
+    font-family: 'Luckiest Guy', cursive, Arial, sans-serif !important;
     background: linear-gradient(90deg, #ff2d2d 0%, #ffe066 30%, #43a047 60%, #3ec6a8 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -64,6 +65,8 @@ body {
     color: transparent;
     text-fill-color: transparent;
     display: inline-block;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 .main-nav ul li a:hover, .main-nav ul li a:focus, .main-nav ul li a.active {
     background: radial-gradient(circle at 70% 70%, #ffb347 60%, #ffe066 100%);
