generalized font redux 1.3

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,8 +12,10 @@
     font-style: normal;
 }
 
-body, html, * {
-    font-family: 'Inter', Arial, sans-serif;
+body, html {
+    margin: 0 !important;
+    padding: 0 !important;
+    background: transparent !important;
 }
 
 .top-banner {
