generalized font redux 1.8

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ html, body {
     -moz-osx-font-smoothing: grayscale;
 }
 body, html, * {
-    font-family: 'Kirby No Kira Kizzu BRK', Arial, sans-serif !important;
+    font-family: 'Unkempt', Arial, sans-serif !important;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
