--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -58,14 +58,14 @@
     </header>
 
     <!-- Navigation Bar -->
-    <nav class="main-nav desktop-nav">
-        <ul>
-            <li><a href="/"><span>Home</span></a></li>
-            <li><a href="/products"><span>All Products</span></a></li>
-            <li><a href="/vision"><span>Our Vision</span></a></li>
-            <li><a href="/blog"><span>Blog</span></a></li>
-            <li><a href="/contact"><span>Contact Us</span></a></li>
-        </ul>
+    <nav>
+      <ul style="display: flex; gap: 2rem; justify-content: center; list-style: none; margin: 2rem 0; padding: 0;">
+        <li><a class="bubble-tab red" href="/">Home</a></li>
+        <li><a class="bubble-tab yellow" href="/products">All Products</a></li>
+        <li><a class="bubble-tab green" href="/vision">Our Vision</a></li>
+        <li><a class="bubble-tab blue" href="/blog">Blog</a></li>
+        <li><a class="bubble-tab purple" href="/contact">Contact Us</a></li>
+      </ul>
     </nav>
     
     <!-- Main Content Block -->
